# riggu_ws

./: .gitmodules  Dockerfile  README.md  setup_workspace.sh  useful_cmd.md
.devcontainer/: Dockerfile  devcontainer.json  postStartCommand.sh  start_zenoh.sh  test_gpu.sh  zenoh_entrypoint.sh
docs/: configuration.md  git_submodules_guide.md  hardware_setup.md  launch_system.md  navigation.md  quick_start_guide.md  riggu_bringup.md  simulation.md  zenoh_configuration.md
maps/: map1.data  map1.pgm  map1.yaml  map_1751650762.yaml  map_1751739828.pgm  map_1751739828.yaml  sim_map.data  sim_map_save.pgm  sim_map_save.yaml  top_station.data  top_station.pgm  top_station.yaml
src/drivelink_interface/: CMakeLists.txt  CONFIG_USAGE.md  package.xml  useful_commands.md
src/drivelink_interface/config/: controller_config.json  node_config.yaml
src/drivelink_interface/include/drivelink_interface/: RollingMeanAccumulator.h  commands.h  communicationinterface.h  controllermanager.h  diffdrive.h  diffdrivecontrol.h  encoderodometry.h  nodeconfigparser.h  odometry.h  rosworker.h  serialhandler.h  structs.h  structserialiser.h  timesyncclient.h
src/drivelink_interface/launch/: drivelink_interface_custom_config.launch.py  drivelink_interface_node.launch.py
src/drivelink_interface/src/: communicationinterface.cpp  controllermanager.cpp  diffdrive.cpp  diffdrivecontrol.cpp  encoderodometry.cpp  main.cpp  nodeconfigparser.cpp  odometry.cpp  rosworker.cpp  serialhandler.cpp  structserialiser.cpp  timesyncclient.cpp
src/joy_to_cmdvel/: CMakeLists.txt  package.xml
src/joy_to_cmdvel/launch/: joy_to_cmdvel.launch.py
src/joy_to_cmdvel/src/: joy_to_cmdvel.cpp
src/riggu_bringup/: package.xml  setup.cfg  setup.py
src/riggu_bringup/config/: config.rviz  drivelink_interface_params.yaml  gz_bridge.yaml  joystick.yaml  mapping.rviz  nav2_params.yaml  twist_mux_config.yaml
src/riggu_bringup/config/drivelink/: controller_config.json  node_config.yaml
src/riggu_bringup/config/joy_to_cmdvel/: joy_to_cmdvel_config.yaml
src/riggu_bringup/config/lidar/: rplidar_c1_config.yaml
src/riggu_bringup/config/slam_toolbox/: mapper_params_lifelong.yaml  mapper_params_online_async.yaml  mapper_params_online_sync.yaml
src/riggu_bringup/launch/: hardware.launch.py  joy.launch.py  launch_rviz.launch.py  launch_sim.launch.py  main.launch.py  mapping.launch.py  odom_calibration.launch.py  simple_control.launch.py
src/riggu_bringup/launch/helpers/: hardware.launch.py  joy.launch.py  launch_sim.launch.py  nav2_slam.launch.py
src/riggu_bringup/launch/slam_toolbox/: online_sync_launch.py
src/riggu_bringup/worlds/: living.sdf  something.sdf
src/riggu_description/: CMakeLists.txt  package.xml
src/riggu_description/launch/: rsp.launch.py
src/riggu_description/urdf/: lidar.xacro  robot.urdf.xacro  ros2_control.xacro
src/twist_stamper/: CMakeLists.txt  package.xml
src/twist_stamper/src/: twist_stamper.cpp  twist_unstamper.cpp
