<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>twist_stamper</name>
  <version>0.0.5</version>
  <description>ROS2 package for converting between Twist and TwistStamped messages</description>
  <maintainer email="josh.newans@gmail.com">Josh Newans</maintainer>
  <author email="josh.newans@gmail.com">Josh Newans</author>
  <license>Apache License 2.0</license>

  <!-- <url type="website">http://wiki.ros.org/twist_stamper</url> -->
  <url type="bugtracker">https://github.com/joshnewans/twist_stamper/issues</url>
  <url type="repository">https://github.com/joshnewans/twist_stamper</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
